--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ chardet==2.2.1
 colorama==0.2.5
 dj-database-url==0.5.0
 Django==1.11.15
-django-forms-bootstrap==3.1.0
+django-bootstrap4==0.0.7
 django-storages==1.7.1
 docutils==0.14
 gunicorn==19.9.0
